--- a/backend/SpringBootServer/src/main/resources/application.yml
+++ b/backend/SpringBootServer/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
         name: spring-boot-server
     datasource:
         driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://localhost:5432/postgres
+        url: jdbc:postgresql://localhost:5432/postgres?currentSchema=myschema
         username: postgres
         password: 1234
     jpa:
