--- a/backend/SpringBootServer/src/main/resources/application.yml
+++ b/backend/SpringBootServer/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
         name: spring-boot-server
     datasource:
         driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://localhost:5432/postgres
+        url: jdbc:postgresql://localhost:5432/postgres?currentSchema=auth
         username: postgres
         password: 1234
     jpa:
@@ -13,6 +13,14 @@ spring:
         show-sql: true
         hibernate:
             ddl-auto: create
+    data:
+        redis:
+            host: localhost
+            port: 6379
+    session:
+        redis:
+            flush-mode: immediate
+            namespace: spring:session
     security:
         oauth2:
             client:
@@ -23,8 +31,16 @@ spring:
                         scope:
                             - profile
                             - email
+                        redirect-uri: "{baseUrl}/login/oauth2/code/google"
+
 server:
     port: 8080
+    forward-headers-strategy: native
+    servlet:
+        session:
+            timeout: 1d
+            cookie:
+                max-age: 1d
 
 logging:
     level:
