--- a/backend/SpringBootServer/src/main/resources/application.yml
+++ b/backend/SpringBootServer/src/main/resources/application.yml
@@ -45,9 +45,16 @@ server:
 logging:
     level:
         root: warn
-
-springdoc:
-    swagger-ui:
-        path: /swagger-ui.html
-    api-docs:
-        path: /api-docs
+# springdoc:
+#     api-docs:
+#         version: openapi-3-1
+#     swagger-ui:
+#         display-request-duration: true
+#         groups-order: DESC
+#         operationsSorter: method
+#         disable-swagger-default-url: true
+#         use-root-path: true
+#         enabled: true
+#     show-actuator: true
+#     cache:
+#         disabled: true
